<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="todo">TODO</string>
    <string name="username">Username :</string>
    <string name="password2">Password :</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="textview2">TextView</string>
    <string name="insert_email">Insert Email</string>
    <string name="insert_password">Insert Password</string>
    <string name="textview">TextView</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="name_here">Name Here</string>
    <string name="password3">Password</string>
    <string name="email_here">Email Here</string>
    <string name="password2con">Password</string>
    <string name="regsiter2">Register</string>
    <string name="change_language">Change_Language</string>
    <string name="textViewWelcome">It Works</string>
    <string name="WebClientID">759942309512-ap7g9m50enaqbdakvkb3deb4ic3153l2.apps.googleusercontent.com</string>
    <string name="upload_image">Upload Image</string>
</resources>